[package]
name = "dslab-kubernetriks"
version = "0.1.0"
edition = "2021"

[dependencies]
dslab-kubernetriks-derive = { path = "src/derive", version = "0.1.0" }
dslab-core = { git = "https://github.com/osukhoroslov/dslab", rev = "4ea3b3a" }

downcast-rs = "1.2.0"
dyn-clone = "1.0.11"

csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.32"
serde_type_name = "0.2.0"
erased-serde = "0.3"

clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
